--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jairus Mark C. Collantes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <meta name="description" content="Here we go again with another portfolio huhu though i go with more professional style this time gahdamn will sir chua ever gonna read this shit ?? o well ">
+    <meta name="description" content="Here we go again with another portfolio huhu though i go with more professional style this time this is going to be a new portfolio of jairus mark collantes ???">
 </head>
 <body>
     <header>
@@ -112,7 +112,7 @@
                 <a href="https://www.facebook.com/jairusmark.collantes"><i class="fab fa-facebook"></i></a>
             </div>
             
-            <p>&copy; 2023 Alex Johnson. All Rights Reserved.</p>
+            <p>&copy; 2025 Jairus Collantes. All <a href="https://jairus.my-board.org/">Rights</a> Reserved.</p>
         </div>
     </footer>
 </body>
