--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <div class="about-text">
                     <p>I'm a passionate Computer Science student with a strong interest in software development, web technologies,and specially game development. Currently pursuing my Bachelor's degree at Manuel S. Enverga University.</p>
                     <p>My journey in computer science began with a curiosity about how games works, which has lead me to searching how programming works. With a strong foundation in computer science and hands-on experience in various technologies, I'm dedicated to writing clean, efficient code and continuously learning new skills.</p>
+                    <p>During these years I have learned web development using html, css and javascript, and game development using python and c#</p>
                 </div>
             </div>
         </div>
